<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notebook">

    <ImageView
        android:id="@+id/hang_pic_id"
        android:layout_width="281dp"
        android:layout_height="393dp"
        android:src="@drawable/hangman0"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="49dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/guess_letter_view_id"
            android:layout_width="166dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/letter"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/enter_letter_id"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textCapCharacters"
            android:maxLength="1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/check_but_id"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/check"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/wins_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="79dp"
        android:layout_toEndOf="@+id/hang_pic_id"
        android:text="@string/wins"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/word_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="161dp"
        android:letterSpacing="0.3"
        android:text="________"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/fails_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="113dp"
        android:layout_toEndOf="@+id/hang_pic_id"
        android:text="@string/fails"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/words_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="147dp"
        android:layout_toEndOf="@+id/hang_pic_id"
        android:text="@string/words"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/words_left_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="181dp"
        android:layout_toEndOf="@+id/hang_pic_id"
        android:text="@string/used"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/letters_used_view_id"
        android:layout_width="130dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="220dp"
        android:layout_toEndOf="@+id/hang_pic_id"
        android:text="@string/letters_used"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wins_counter_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/wins_view_id"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fails_counter_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fails_view_id"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/words_counter_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/words_view_id"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/words_used_count_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/words_left_view_id"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/letters_used_list_id"
        android:layout_width="131dp"
        android:layout_height="114dp"
        android:layout_below="@+id/letters_used_view_id"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/hang_pic_id"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>